// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toast mounts a success toast 1`] = `
.emotion-0 {
  border-color: #03ef62;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background: white;
  border-left-style: solid;
  border-left-width: 4px;
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5, 25, 45, 0.3),0px 8px 12px -4px rgba(5, 25, 45, 0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  max-width: 512px;
  min-width: 250px;
  padding: 16px;
  position: relative;
  z-index: 999;
}

.emotion-1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 12px;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  color: #05192d;
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 12px;
  letter-spacing: 0px;
  line-height: 16px;
}

*:not(style)~.emotion-3 {
  margin-top: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: white;
  border: none;
  border-radius: 2px;
  color: #05192d;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  padding: 0;
  width: 20px;
  z-index: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4:active {
  color: #03ef62;
}

.emotion-4:disabled {
  color: #d9d9e2;
}

.emotion-4:disabled:hover,
.emotion-4:disabled:focus {
  background-color: transparent;
}

.emotion-4:focus {
  background-color: #efefef;
}

.emotion-4:hover {
  background-color: #efefef;
}

<div
  class="Toastify__toast-body"
  role="alert"
>
  <div
    class="emotion-0"
  >
    <svg
      aria-hidden="false"
      class="emotion-1"
      height="18"
      role="img"
      viewBox="0 0 18 18"
      width="18"
    >
      <title>
        success
      </title>
      <path
        d="M9 18A9 9 0 119 0a9 9 0 010 18zm2.326-11.96l-3.355 4.143L6.63 8.627a1 1 0 10-1.514 1.307l2.124 2.461a1 1 0 001.534-.024l4.108-5.073a1 1 0 00-1.555-1.259z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="emotion-2"
    >
      <h4
        class="emotion-3"
      >
        test toast title
      </h4>
    </div>
    <button
      aria-label="Close"
      class="emotion-4"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="12"
        role="img"
        viewBox="0 0 18 18"
        width="12"
      >
        <title>
          Cross
        </title>
        <path
          d="M9.005 7.625l4.83-4.83a.976.976 0 011.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 11-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 01-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 111.38-1.38l4.84 4.84z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`toast mounts an error toast 1`] = `
.emotion-0 {
  border-color: #ff5400;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background: white;
  border-left-style: solid;
  border-left-width: 4px;
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5, 25, 45, 0.3),0px 8px 12px -4px rgba(5, 25, 45, 0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  max-width: 512px;
  min-width: 250px;
  padding: 16px;
  position: relative;
  z-index: 999;
}

.emotion-1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 12px;
  margin-right: 8px;
}

.emotion-3 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  color: #05192d;
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 12px;
  letter-spacing: 0px;
  line-height: 16px;
}

*:not(style)~.emotion-3 {
  margin-top: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: white;
  border: none;
  border-radius: 2px;
  color: #05192d;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  padding: 0;
  width: 20px;
  z-index: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4:active {
  color: #03ef62;
}

.emotion-4:disabled {
  color: #d9d9e2;
}

.emotion-4:disabled:hover,
.emotion-4:disabled:focus {
  background-color: transparent;
}

.emotion-4:focus {
  background-color: #efefef;
}

.emotion-4:hover {
  background-color: #efefef;
}

<div
  class="Toastify__toast-body"
  role="alert"
>
  <div
    class="emotion-0"
  >
    <svg
      aria-hidden="false"
      class="emotion-1"
      height="18"
      role="img"
      viewBox="0 0 18 18"
      width="18"
    >
      <title>
        error
      </title>
      <path
        d="M9 18A9 9 0 119 0a9 9 0 010 18zm1.414-9l2.122-2.121a1 1 0 10-1.415-1.415L9 7.586 6.879 5.464A1 1 0 005.464 6.88L7.586 9l-2.122 2.121a1 1 0 001.415 1.415L9 10.414l2.121 2.122a1 1 0 001.415-1.415L10.414 9z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="emotion-2"
    >
      <h4
        class="emotion-3"
      >
        test toast title
      </h4>
    </div>
    <button
      aria-label="Close"
      class="emotion-4"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="12"
        role="img"
        viewBox="0 0 18 18"
        width="12"
      >
        <title>
          Cross
        </title>
        <path
          d="M9.005 7.625l4.83-4.83a.976.976 0 011.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 11-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 01-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 111.38-1.38l4.84 4.84z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;
